--- a/public/src/form.scss
+++ b/public/src/form.scss
@@ -17,7 +17,7 @@ input[type=text], select, input.text {
     padding: 2px;
     margin-bottom: 5px;
     margin-top: 0;
-    width: 100%;
+    width: 96%;
 }
 
 
@@ -40,7 +40,7 @@ textarea {
     font-size:13px;
     line-height: 18px;
     height: 100px;
-    width: 100%;
+    width: 96%;
     font-family:$blueprint-font-family;
 }
 
@@ -717,4 +717,42 @@ span.sort_handle{
  
 .requesteremail, .agentemail{
 	height:220px;
+}
+
+.live_search{
+    text-align:left;
+    float:left;
+    padding:0px 0px 0px 0px;
+    margin:8px 0px;
+    .loading{
+    	background-position:right !important;
+    }
+} 
+
+input.search{
+	@include corners(3px);
+    margin-right: 10px;
+    background-color: #FFFFFF;
+    border: 1px solid #C7C7C7;
+    color: #747472;
+    font-size: 13px;
+    height:18px;
+    padding: 5px 7px;
+    width: 500px;
+}
+
+.sp_paragraph{
+	@include corners(3px);
+    background-color: #FFFFFF;
+    border: 1px solid #C7C7C7;
+    color: #747472;
+    margin-bottom:8px;
+}
+
+
+.search-grey-box{
+	@include clearfix;
+	background-color:#f2f2f2;
+	border-top:1px solid #e2e2e2; 
+	padding:6px 30px 6px 20px;  
 }
